--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.1.9",
+    "zustand": "^4.5.4",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
