--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/static": "^5.0.0",
     "@fastify/swagger": "^8.15.0",
