--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.3",
+    "axios": "^1.7.4",
+    "axios-cookiejar-support": "^5.0.2",
+    "got": "^14.4.2",
+    "js-cookie": "^3.0.5",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.9",
-    "zustand": "^4.5.4",
-    "react-icons": "^5.2.1"
+    "tough-cookie": "^4.1.4",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/tough-cookie": "^4.0.5",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
