--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/tough-cookie": "^4.0.5",
